# p-token

./: Cargo.toml  README.md  package.json
.github/workflows/: main.yml
fixtures/: Cargo.toml
fixtures/src/: main.rs
interface/src/: instruction.rs
interface/src/state/: account.rs  mint.rs  mod.rs  multisig.rs
program/: Cargo.toml
program/src/: entrypoint.rs  lib.rs
program/src/processor/: amount_to_ui_amount.rs  approve.rs  approve_checked.rs  batch.rs  burn.rs  burn_checked.rs  close_account.rs  freeze_account.rs  get_account_data_size.rs  initialize_account.rs  initialize_account2.rs  initialize_account3.rs  initialize_immutable_owner.rs  initialize_mint.rs  initialize_mint2.rs  initialize_multisig.rs  initialize_multisig2.rs  mint_to.rs  mint_to_checked.rs  mod.rs  revoke.rs  set_authority.rs  sync_native.rs  thaw_account.rs  transfer.rs  transfer_checked.rs  ui_amount_to_amount.rs
program/src/processor/shared/: approve.rs  burn.rs  initialize_account.rs  initialize_mint.rs  initialize_multisig.rs  mint_to.rs  mod.rs  toggle_account_state.rs  transfer.rs
program/src/state/: account.rs  mint.rs  multisig.rs
program/tests/: batch.rs  initialize_mint.rs  initialize_mint2.rs  processor.rs
program/tests/setup/: mod.rs
scripts/: fixtures.mjs
