[workspace]
resolver = "2"
members = ["interface", "program"]

[workspace.metadata.cli]
solana = "2.1.0"

[workspace.metadata.toolchains]
format = "nightly-2024-08-08"
lint = "nightly-2024-08-08"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/febo/token"

[workspace.dependencies]
pinocchio = { git = "https://github.com/febo/pinocchio.git", branch = "crate-features" }
pinocchio-log = { git = "https://github.com/febo/pinocchio.git", branch = "crate-features" }
pinocchio-pubkey = { git = "https://github.com/febo/pinocchio.git", branch = "crate-features" }
