[workspace]
resolver = "2"
members = [
    "fixtures",
    "interface",
    "program"
]

[workspace.metadata.cli]
solana = "2.1.0"

[workspace.metadata.toolchains]
format = "nightly-2024-08-08"
lint = "nightly-2024-08-08"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/febo/token"

[workspace.dependencies]
mollusk-svm = { version = "0.0.13", features = ["fuzz"], git = "https://github.com/buffalojoec/mollusk.git" }
mollusk-svm-fuzz-fixture = { version = "0.0.13", git = "https://github.com/buffalojoec/mollusk.git" }
pinocchio = "0.7.1"
pinocchio-log = "0.3.0"
pinocchio-pubkey = "0.2.2"
