[package]
name = "token-program"
version = "0.0.0"
edition = { workspace = true }
readme = "./README.md"
license = { workspace = true }
repository = { workspace = true }
publish = false

[package.metadata.solana]
program-id = "PToken1111111111111111111111111111111111111"

[lib]
crate-type = ["cdylib"]

[features]
logging = []
test-sbf = []

[dependencies]
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-pubkey = { workspace = true }
token-interface = { version = "^0", path = "../interface" }

[dev-dependencies]
assert_matches = "1.5.0"
mollusk-svm = { version = "0.0.13", git = "https://github.com/buffalojoec/mollusk.git" }
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"
spl-token = { version="^4", features=["no-entrypoint"] }
test-case = "3.3.1"
