[package]
name = "token-program"
version = "0.0.0"
edition = { workspace = true }
readme = "./README.md"
license = { workspace = true }
repository = { workspace = true }
publish = false

[package.metadata.solana]
program-id = "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"

[lib]
crate-type = ["cdylib"]

[features]
logging = []
test-sbf = []

[dependencies]
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-pubkey = { workspace = true }
token-interface = { version = "^0", path = "../interface" }

[dev-dependencies]
assert_matches = "1.5.0"
mollusk-svm = { workspace = true }
mollusk-svm-fuzz-fixture = { workspace = true }
solana-program-test = "2.1"
solana-sdk = "2.1"
spl-token = { version="^4", features=["no-entrypoint"] }
test-case = "3.3.1"
